added source type generic to import configurator base class & some tcs import bugfixes