@@ -11,6 +11,7 @@ package eu.etaxonomy.cdm.io.sdd.in;
 
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import org.apache.log4j.Logger;
@@ -22,10 +23,8 @@ import eu.etaxonomy.cdm.database.ICdmDataSource;
 import eu.etaxonomy.cdm.io.common.IImportConfigurator;
 import eu.etaxonomy.cdm.io.common.IMatchingImportConfigurator;
 import eu.etaxonomy.cdm.io.common.ImportConfiguratorBase;
-import eu.etaxonomy.cdm.io.common.ImportStateBase;
 import eu.etaxonomy.cdm.io.common.mapping.IInputTransformer;
 import eu.etaxonomy.cdm.io.sdd.SDDTransformer;
-import eu.etaxonomy.cdm.model.reference.IDatabase;
 import eu.etaxonomy.cdm.model.reference.ReferenceBase;
 import eu.etaxonomy.cdm.model.reference.ReferenceFactory;
 
@@ -34,7 +33,7 @@ import eu.etaxonomy.cdm.model.reference.ReferenceFactory;
  * @created 24.10.2008
  * @version 1.0
  */
-public class SDDImportConfigurator extends ImportConfiguratorBase implements IImportConfigurator, IMatchingImportConfigurator {
+public class SDDImportConfigurator extends ImportConfiguratorBase<SDDImportState, URI> implements IImportConfigurator, IMatchingImportConfigurator {
 	private static final Logger logger = Logger.getLogger(SDDImportConfigurator.class);
 
 	//TODO
@@ -51,9 +50,8 @@ public class SDDImportConfigurator extends ImportConfiguratorBase implements IIm
 		};
 	};
 	
-	public static SDDImportConfigurator NewInstance(String url,
-			ICdmDataSource destination){
-		return new SDDImportConfigurator(url, destination);
+	public static SDDImportConfigurator NewInstance(URI uri, ICdmDataSource destination){
+		return new SDDImportConfigurator(uri, destination);
 	}
 	
 	
@@ -62,9 +60,9 @@ public class SDDImportConfigurator extends ImportConfiguratorBase implements IIm
 	 * @param sourceReference
 	 * @param destination
 	 */
-	private SDDImportConfigurator(String url, ICdmDataSource destination) {
+	private SDDImportConfigurator(URI uri, ICdmDataSource destination) {
 		super(defaultTransformer);
-		setSource(url);
+		setSource(uri);
 		setDestination(destination);
 	}
 	
@@ -78,28 +76,14 @@ public class SDDImportConfigurator extends ImportConfiguratorBase implements IIm
 		return new SDDImportState(this);
 	}
 
-	/* (non-Javadoc)
-	 * @see eu.etaxonomy.cdm.io.common.ImportConfiguratorBase#getSource()
-	 */
-	public String getSource() {
-		return (String)super.getSource();
-	}
-
-	/**
-	 * @param file
-	 */
-	public void setSource(String file) {
-		super.setSource(file);
-	}
 
 	/**
 	 * @return
 	 */
 	public Element getSourceRoot(){
-		String source = getSource();
 		try {
 			URL url;
-			url = new URL(source);
+			url = getSource().toURL();
 			Object o = url.getContent();
 			InputStream is = (InputStream)o;
 			Element root = XmlHelp.getRoot(is);
@@ -142,7 +126,7 @@ public class SDDImportConfigurator extends ImportConfiguratorBase implements IIm
 		if (this.getSource() == null){
 			return null;
 		}else{
-			return this.getSource();
+			return this.getSource().toString();
 		}
 	}
 
